# auth_service

./: .env.template  README.md  pyproject.toml
auth_microservice_app/: app.py  flask_config.py
auth_microservice_app/middleware/: logging.py
auth_microservice_app/models/: __init__.py  user.py  user_session.py
auth_microservice_app/routes/: __init__.py  auth.py  core_auth.py  health.py  test_jwt.py
auth_microservice_app/utils/: __init__.py  jwt_utils.py  limiter.py  logger.py  redis_client.py
migrations/versions/: bf8afc926450_initial_migration.py  e2cbe12ba283_updated_user_model.py
